# meltano-explore

./: README.md  pyproject.toml
meltano-projects/: meltano.yml
projects/: meltano.yml
tap-jsonplaceholder/: LICENSE  README.md  meltano.yml  pyproject.toml
tap-jsonplaceholder/.github/workflows/: test.yml
tap-jsonplaceholder/tap_jsonplaceholder/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap-jsonplaceholder/tests/: __init__.py  test_core.py
