[tool.poetry]
name = "meltano-explore"
version = "0.1.0"
description = ""
authors = ["Xiangshi Yin <piupiuyin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
meltano = "^3.3.1"
cookiecutter = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
